--- a/app/src/main/res/layout/activity_trailer.xml
+++ b/app/src/main/res/layout/activity_trailer.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
-    tools:context="com.example.ABeeR.TrailerActivity">
+    tools:context="com.example.abeer.TrailerActivity">
 
     <ListView
         android:id="@+id/list_view"
