--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.ABeeR.MainFragment"
+    android:name="com.example.abeer.MainFragment"
     tools:context=".MainActivity">
 
 </fragment>
