--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,7 +7,7 @@
         android:padding="25dp"
         tools:actionBarNavMode="standard"
 
-        tools:context="com.example.ABeeR.DetailsActivity">
+        tools:context="com.example.abeer.DetailsActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -17,7 +17,7 @@
                 android:id="@+id/image_poster"
                 android:layout_width="170dp"
                 android:layout_height="218dp"
-                android:src="@drawable/movie2" />
+                android:src="@drawable/movie" />
 
             <TextView
                 android:id="@+id/tv_date"
