--- a/app/src/main/res/layout/moviedetail.xml
+++ b/app/src/main/res/layout/moviedetail.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:name="com.example.ABeeR.DetailsFragment"
+    android:name="com.example.abeer.DetailsFragment"
     tools:context=".DetailsActivity">
 
 </fragment>
